# tmpfs

./: .gitignore  CMakeLists.txt  README.md  makefile  run_tests.sh
inc/: utils.h
src/: myfs.c  tmpfs.c  utils.c
tests/: test_tmpfs.py
